# ChronoClean

./: .gitignore  .jscpd.json  ARCHITECTURE.md  CLI Command Map.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: quality.yml  tests.yml
chronoclean/: __init__.py  __main__.py
chronoclean/cli/: __init__.py  _common.py  apply_cmd.py  cleanup_cmd.py  config_cmd.py  doctor_cmd.py  export_cmd.py  helpers.py  main.py  options.py  scan_cmd.py  tags_cmd.py  verify_cmd.py  version_cmd.py
chronoclean/config/: __init__.py  loader.py  schema.py  templates.py
chronoclean/core/: __init__.py  cleaner.py  date_inference.py  duplicate_checker.py  exif_reader.py  exporter.py  file_operations.py  folder_tagger.py  hashing.py  models.py  renamer.py  run_discovery.py  run_record.py  run_record_writer.py  scanner.py  sorter.py  tag_rules_store.py  verification.py  verifier.py  video_metadata.py
chronoclean/utils/: __init__.py  constants.py  deps.py  json_utils.py  logging.py  path_utils.py
configs/: chronoclean.default.yaml  chronoclean.minimal.yaml
docs/: CODEBASE_REVIEW_v0.3.3.md  CONFIGURATION.md  IMPLEMENTATION_SPEC_v0.1.md  IMPLEMENTATION_SPEC_v0.2.md  IMPLEMENTATION_SPEC_v0.3.1.md  IMPLEMENTATION_SPEC_v0.3.2.md  IMPLEMENTATION_SPEC_v0.3.4.md  IMPLEMENTATION_SPEC_v0.3.md  IMPLEMENTATION_SPEC_v0.4.md  IMPLEMENTATION_SPEC_v0.5.md  IMPLEMENTATION_SPEC_v0.6.md  SYNOLOGY_INSTALLATION.md
tests/: __init__.py  conftest.py
tests/integration/: test_collision_handling.py  test_workflow.py
tests/unit/: test_cleaner.py  test_cli_apply.py  test_cli_cleanup.py  test_cli_doctor.py  test_cli_export.py  test_cli_helpers.py  test_cli_scan.py  test_cli_tags.py  test_cli_verify.py  test_cli_version.py  test_config.py  test_config_commands.py  test_config_integration.py  test_date_inference.py  test_duplicate_checker.py  test_exif_reader.py  test_exporter.py  test_file_operations.py  test_filename_date.py  test_folder_tagger.py  test_hashing.py  test_models.py  test_renamer.py  test_run_discovery.py  test_run_record.py  test_run_record_writer.py  test_scanner.py  test_sorter.py  test_tag_rules_store.py  test_verification.py  test_verifier.py  test_video_metadata.py
